--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3'
 services:
   dcs1:
@@ -6,10 +5,37 @@ services:
       context: .
       dockerfile: Dockerfile.DCS1
     container_name: dcs1_container
-    
+    ports:
+      - "5001:5000"  # 将容器的 5000 端口映射到主机的 5001 端口
+
   dcs2:
     build:
       context: .
       dockerfile: Dockerfile.DCS2
     container_name: dcs2_container
+    ports:
+      - "5002:5000"  # 将容器的 5000 端口映射到主机的 5002 端口
 
+  dcs3:
+    build:
+      context: .
+      dockerfile: Dockerfile.DCS3
+    container_name: dcs3_container
+    ports:
+      - "5003:5000"  # 将容器的 5000 端口映射到主机的 5003 端口
+
+  redundant:
+    build:
+      context: .
+      dockerfile: Dockerfile.RedundantPLC
+    container_name: redundantplc_container
+    ports:
+      - "5004:5000"  # 将容器的 5000 端口映射到主机的 5004 端口
+
+  incubator:
+    build:
+      context: .
+      dockerfile: Dockerfile.Incubator
+    container_name: incubator_container
+    ports:
+      - "5005:5000"  # 将容器的 5000 端口映射到主机的 5005 端口
